--- a/MonitorLib/MonitorCrashLib/src/main/res/layout/base_recycler_view.xml
+++ b/MonitorLib/MonitorCrashLib/src/main/res/layout/base_recycler_view.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray_background">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
