mvp案例职责学习

--- a/app/src/main/res/layout/head_recommend_view.xml
+++ b/app/src/main/res/layout/head_recommend_view.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="15dp"
-    android:paddingTop="15dp"
-    android:background="@color/white">
+    android:paddingTop="15dp">
 
     <TextView
         android:id="@+id/tv_home_nine"
