--- a/Business/AndroidBusiness/src/main/res/layout/fragment_android_project.xml
+++ b/Business/AndroidBusiness/src/main/res/layout/fragment_android_project.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
@@ -36,7 +36,7 @@
         </RelativeLayout>
 
 
-        <org.yczbj.ycrefreshviewlib.YCRefreshView
+        <org.yczbj.ycrefreshviewlib.view.YCRefreshView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/rvList"
             android:layout_width="match_parent"
@@ -54,10 +54,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="right"
         android:background="@android:color/white">
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvKinds"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
