--- a/Business/AndroidBusiness/src/main/res/layout/activity_android_search.xml
+++ b/Business/AndroidBusiness/src/main/res/layout/activity_android_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
@@ -43,9 +43,9 @@
                 android:textColor="@android:color/white" />
         </RelativeLayout>
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
-    <org.yczbj.ycrefreshviewlib.YCRefreshView
+    <org.yczbj.ycrefreshviewlib.view.YCRefreshView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
