--- a/Business/AndroidBusiness/src/main/res/layout/item_web_navi.xml
+++ b/Business/AndroidBusiness/src/main/res/layout/item_web_navi.xml
@@ -16,7 +16,7 @@
         android:text="@string/kinds_two" />
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
@@ -27,6 +27,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
