--- a/Business/JetpackBusiness/src/main/res/layout/activity_jetpack_main.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/activity_jetpack_main.xml
@@ -7,12 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/home_nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/home_nav_graph" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
