--- a/Business/JetpackBusiness/src/main/res/layout/activity_saved_state.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/activity_saved_state.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/name_tv"
