--- a/Business/JetpackBusiness/src/main/res/navigation/home_nav_graph.xml
+++ b/Business/JetpackBusiness/src/main/res/navigation/home_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_nav_graph"
-    app:startDestination="@id/home_nav_graph">
+    app:startDestination="@id/homeFragment">
     <!--app:startDestination 默认的起始位置-->
 
 
