--- a/Business/JetpackBusiness/src/main/res/layout/activity_jetpack_main.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/activity_jetpack_main.xml
@@ -7,8 +7,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <fragment
+        android:id="@+id/fragment_home"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/home_nav_graph"/>
 
 </LinearLayout>
