--- a/Business/JetpackBusiness/src/main/res/layout/fragment_home.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tv_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:padding="@dimen/dp10"
         android:text="Navigation学习案例"/>
 
