--- a/Business/JetpackBusiness/src/main/res/layout/activity_navigation_home.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/activity_navigation_home.xml
@@ -25,8 +25,11 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_view"
+        app:itemIconTint="@color/colorPrimaryDark"
+        app:itemTextColor="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp50"
+        android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_nav_menu" />
 
 
