--- a/Business/JetpackBusiness/src/main/res/layout/fragment_navigation_home.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/fragment_navigation_home.xml
@@ -32,7 +32,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="通过destination跳转页面"
+        android:text="普通跳转"
         app:layout_constraintBottom_toTopOf="@+id/btn_action"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,6 +53,33 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_destination" />
+
+    <Button
+        android:id="@+id/btn_arguments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="@dimen/dp10"
+        android:text="跳转(基本类型参数)"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_action" />
+
+    <Button
+        android:id="@+id/btn_bean"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="@dimen/dp10"
+        android:text="跳转(实体类参数)"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_arguments" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
