--- a/Business/JetpackBusiness/src/main/res/layout/activity_saved_state.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/activity_saved_state.xml
@@ -8,45 +8,54 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/name_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="Name:"
-        app:layout_constraintBottom_toTopOf="@+id/name_et"
-        app:layout_constraintStart_toStartOf="@+id/name_et"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <EditText
-        android:id="@+id/name_et"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
-        android:hint="输入"
+        android:layout_marginTop="32dp"
+        android:textSize="@dimen/textSize20"
+        android:text="Name:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_tv" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
 
     <Button
-        android:id="@+id/save_bt"
+        android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginTop="32dp"
-        android:text="Save"
-        app:layout_constraintStart_toStartOf="@+id/name_et"
-        app:layout_constraintTop_toBottomOf="@+id/name_et" />
+        android:text="Save1"
+        app:layout_constraintStart_toStartOf="@+id/tv_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <TextView
-        android:id="@+id/saved_vm_tv"
+        android:id="@+id/tv_saved_vm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="Saved in ViewModel:"
-        app:layout_constraintStart_toStartOf="@+id/save_bt"
-        app:layout_constraintTop_toBottomOf="@+id/save_bt" />
+        app:layout_constraintStart_toStartOf="@+id/btn_save"
+        app:layout_constraintTop_toBottomOf="@+id/btn_save" />
+
+    <TextView
+        android:id="@+id/tv_text_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:text="Saved in ViewModel:"
+        app:layout_constraintStart_toStartOf="@+id/tv_saved_vm"
+        app:layout_constraintTop_toBottomOf="@+id/tv_saved_vm" />
+
+
+    <Button
+        android:id="@+id/btn_send"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="32dp"
+        android:text="Save2"
+        app:layout_constraintStart_toStartOf="@+id/tv_text_next"
+        app:layout_constraintTop_toBottomOf="@+id/tv_text_next" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
