--- a/Business/JetpackBusiness/src/main/res/layout/activity_saved_state.xml
+++ b/Business/JetpackBusiness/src/main/res/layout/activity_saved_state.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
-        android:textSize="@dimen/textSize20"
         android:text="Name:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +23,7 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:text="Save1"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
@@ -33,7 +32,7 @@
         android:id="@+id/tv_saved_vm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="12dp"
         android:text="Saved in ViewModel:"
         app:layout_constraintStart_toStartOf="@+id/btn_save"
         app:layout_constraintTop_toBottomOf="@+id/btn_save" />
@@ -42,7 +41,7 @@
         android:id="@+id/tv_text_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="12dp"
         android:text="Saved in ViewModel:"
         app:layout_constraintStart_toStartOf="@+id/tv_saved_vm"
         app:layout_constraintTop_toBottomOf="@+id/tv_saved_vm" />
@@ -52,10 +51,26 @@
         android:id="@+id/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         android:text="Save2"
         app:layout_constraintStart_toStartOf="@+id/tv_text_next"
         app:layout_constraintTop_toBottomOf="@+id/tv_text_next" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/btn_send">
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp50"/>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
