--- a/CommonLib/LibraryLayer/src/main/res/layout/base_activity_guide.xml
+++ b/CommonLib/LibraryLayer/src/main/res/layout/base_activity_guide.xml
@@ -20,13 +20,13 @@
         android:layout_marginEnd="20dp"
         app:cd_animator_time="3"
         app:cd_animator_time_unit="秒"
-        app:cd_arc_color="@color/white"
+        app:cd_arc_color="@color/whiteBg"
         app:cd_arc_width="2dp"
         app:cd_bg_color="@color/alpha_50_black"
         app:cd_circle_radius="20dp"
         app:cd_location="top"
         app:cd_retreat_type="forward"
-        app:cd_text_color="@color/white"
+        app:cd_text_color="@color/whiteBg"
         app:cd_text_size="9sp" />
 
 </FrameLayout>
