--- a/Business/BleBusiness/src/main/res/layout/activity_ble_main.xml
+++ b/Business/BleBusiness/src/main/res/layout/activity_ble_main.xml
@@ -86,6 +86,12 @@
         android:padding="10dp">
 
         <Button
+            android:id="@+id/btn_easy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="简单案例" />
+
+        <Button
             android:id="@+id/btn_scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
