--- a/Business/BleBusiness/src/main/res/layout/activity_ble_main.xml
+++ b/Business/BleBusiness/src/main/res/layout/activity_ble_main.xml
@@ -72,6 +72,17 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center_horizontal"
+        android:background="#eeeeee"
+        android:padding="10dp" />
+
+    <TextView
         android:id="@+id/txt_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
